# kairos

./: .gitignore  Cargo.toml  README.md
src/: client.rs  constants.rs  device.rs  main.rs  main.rs.bak  protocol.rs  recordings.rs  stack.rs
ui/: build.js  package-lock.json  package.json  tsconfig.json
ui/extension/: Cargo.toml
ui/extension/src/: lib.rs
ui/src/: app.svelte  app.svelte.bak  appState.svelte.ts  button.svelte  colormaps.ts  constants.ts  container.svelte  decodeWorker.ts  deviceConfiguration.ts  devicepane.svelte  displayPane.svelte  displaypane.svelte  dropdown.svelte  eventDisplay.svelte  eventPainter.ts  evk4SamplesDecoder.ts  evt3DecoderWorker.ts  layoutPopover.svelte  layoutpopover.svelte  numberInput.svelte  numberInputWithSlider.svelte  painter.ts  popoverMask.svelte  protocol.svelte.ts  recordingsPopover.svelte  sampleDisplay.svelte  samplePainter.ts  slider.svelte  statusbar.svelte  styles.css  switch.svelte  transport.ts.bak  transportWorker.bak.ts  transportWorker.ts  utilities.ts  workers.ts.bak  workspace.svelte
