[package]
authors = [
  "International Centre for Neuromorphic Systems",
  "Alexandre Marcireau",
]
edition = "2021"
license = "MIT"
name = "kairos"
readme = "README.md"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.5.37", features = ["derive"]}
http-body-util = "0.1.3"
hyper = {version = "1.6.0", features = ["http1", "server"]}
hyper-util = {version = "0.1.11", features = ["tokio"]}
neuromorphic-drivers = {path = "../neuromorphic-drivers/drivers"}
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
tokio = {version = "1.44.2", features = [
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
]}

wtransport = "0.6.1"
