[package]
authors = [
  "International Centre for Neuromorphic Systems",
  "Alexandre Marcireau",
]
edition = "2021"
license = "MIT"
name = "kairos"
readme = "README.md"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4.41"
clap = {version = "4.5.40", features = ["derive", "string"]}
http-body-util = "0.1.3"
hyper = {version = "1.6.0", features = ["http1", "server"]}
hyper-util = {version = "0.1.11", features = ["tokio"]}
neuromorphic-drivers = "0.16.0"
paste = "1.0"
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
sysinfo = {version = "0.35.2", default-features = false, features = ["disk"]}
thiserror = "1.0"
tokio = {version = "1.44.2", features = [
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
]}
toml = {version = "0.8.23", features = ["display"]}
wtransport = "0.6.1"
zip = {version = "4.2.0", default-features = false, features = ["chrono", "deflate"]}
